<resources>
    <string name="app_name">Spotter</string>
    <string name="login_welcome">Welcome</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Sign in</string>

    <string name="error_invalid_email">Invalid email</string>
    <string name="error_weak_password">Your password is weak</string>
    <string name="no_connection">No internet connection! Try again later!</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="middle_name_hint">Middle name (optional)</string>
    <string name="date_of_birth_hint">Date of birth</string>
    <string name="city_hint">City</string>
    <string name="processing_progress">Processing…</string>
    <string name="my_drivers">Drivers</string>
    <string name="drunk">Drunk</string>
    <string name="analytics">Analytics</string>
    <string name="invalid_creds">Your credentials are invalid!</string>
    <string name="sign_out_confirmation">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_label">Email:</string>
    <string name="b_day_label">Birthday:</string>
    <string name="organization_label">Organization:</string>
    <string name="full_name">%s %s</string>
    <string name="status_label">Current status</string>
    <string name="drunk_drivers">Drunk Drivers</string>
    <string name="start_text">Choose start date: </string>
    <string name="from">From:</string>
    <string name="end_text">Choose end date:</string>
    <string name="to">To:</string>
    <string name="total">Total drunk amount:</string>
    <string name="incidents_count">Incidents count:</string>
    <string name="drinking_level">Drinking level</string>
</resources>