<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardCornerRadius="12dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/double_margin">

                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="276dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:maxLines="2"
                    android:textAlignment="center"
                    android:textColor="#00B1FF"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="zlobste Yehor" />

                <TextView
                    android:id="@+id/email_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/full_name"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/double_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:text="@string/email_label"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/email_label"
                    app:layout_constraintStart_toEndOf="@+id/email_label"
                    android:layout_marginStart="@dimen/double_margin"
                    tools:text="zlobste.yehor@nure.ua"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/b_day_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/email_label"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/double_margin"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:text="@string/b_day_label"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/b_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/b_day_label"
                    app:layout_constraintStart_toEndOf="@+id/b_day_label"
                    android:layout_marginStart="@dimen/double_margin"
                    tools:text="17 Mar 2001"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/one_and_a_half_margin"
                    android:background="@color/divider_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/b_day_label" />

                <TextView
                    android:id="@+id/status_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/view"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="@dimen/double_margin"
                    android:layout_marginTop="@dimen/one_and_a_half_margin"
                    android:text="@string/status_label"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/drunk_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/status_label"
                    app:layout_constraintStart_toEndOf="@+id/status_label"
                    android:layout_marginStart="@dimen/double_margin"
                    tools:text="Drunk"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/close_info_button"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_close"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="@dimen/double_margin"/>
    </LinearLayout>



</layout>